--- a/index.html
+++ b/index.html
@@ -20,26 +20,15 @@
 			// stores 2d rendering context, tool used to paint on canvas
 			const ctx = canvas.getContext('2d');
 
-			// rect: 
-			// first 2 values: left/top corner coordinates; last 2 values: width + height
-			ctx.beginPath();
-			ctx.fillStyle = '#00ff00';
-			ctx.fillRect(20, 40, 50, 50);
-			ctx.closePath();	
+			function draw() {
+				ctx.beginPath();
+				ctx.arc(50, 50, 10, 0, Math.PI*2);
+				ctx.fillStyle = '#0095dd';
+				ctx.fill();
+				ctx.closePath();
 
-			// circle:
-			// first 2 values: x/y coordinates of arc's center; arc radius; start + end angle; direction of drawing (false=clockwise, default/ optional) 
-			ctx.beginPath();
-			ctx.arc(240, 160, 20, 0, Math.PI*2, false);
-			ctx.fillStyle = 'pink';
-			ctx.fill();
-			ctx.closePath();
-
-			// stroke instead of fill
-			ctx.beginPath();
-			ctx.strokeStyle = 'rgba(0, 0, 255, 0.5)';
-			ctx.strokeRect(160, 10, 100, 40);
-			ctx.closePath();
+			}
+			setInterval(draw, 10);
 		}
 		else {
 			const msg = document.getElementById('msg')
