--- a/index.html
+++ b/index.html
@@ -22,13 +22,14 @@
 
 			let x = canvas.width/2;
 			let y = canvas.height - 30;
+			let ballRadius = 10;
 
 			let dx = 2;
 			let dy = -2;
 
 			function drawBall() {
 				ctx.beginPath();
-				ctx.arc(x, y, 10, 0, Math.PI*2);
+				ctx.arc(x, y, ballRadius, 0, Math.PI*2);
 				ctx.fillStyle = '#0095dd';
 				ctx.fill();
 				ctx.closePath();
