--- a/index.html
+++ b/index.html
@@ -35,6 +35,12 @@
 				ctx.closePath();
 			}
 
+			function checkBoundaries() {
+				if(y + dy < 0 || y + dy > canvas.height) {
+					dy = -dy;
+				}
+			}
+
 			function draw() {
 				ctx.clearRect(0, 0, canvas.width, canvas.height);
 				drawBall();
@@ -42,8 +48,7 @@
 				y+=dy;
 			}
 			setInterval(draw, 10);
-		}
-		else {
+		} else {
 			const msg = document.getElementById('msg')
 			msg.innerHTML = 'canvas unsupported';
 		}
