tweaked boundaries fn to use ballRadius in calculating boundary of canvas-- right and bottom of canvas - ballradius and top and left boundary, instead of using position 0, ballRadius is used-- doing this now prevents ball from sinking into wall midway

--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
 
 			function checkBoundaries() {
 				// checks top/bottom boundary
-				if(y + dy < 0 || y + dy > canvas.height) {
+				if(y + dy < ballRadius || y + dy > canvas.height - ballRadius) {
 					dy = -dy;
 				}
 				// checks left/right boundary
-				if(x + dx < 0 || x + dx > canvas.width) {
+				if(x + dx < ballRadius || x + dx > canvas.width - ballRadius) {
 					dx = -dx;
 				}
 			}
