added drawPaddle fn, no functionality yet

--- a/index.html
+++ b/index.html
@@ -20,10 +20,15 @@
 			// stores 2d rendering context, tool used to paint on canvas
 			const ctx = canvas.getContext('2d');
 
-			let x = canvas.width/2;
-			let y = canvas.height - 30;
+			const paddleWidth = 75;
+			const paddleHeight = 10;
+			const paddleX = (canvas.width - paddleWidth)/2;
+
 			let ballRadius = 10;
 
+			let x = canvas.width/2;
+			let y = canvas.height - 30;
+			
 			let dx = 2;
 			let dy = -2;
 
@@ -32,6 +37,13 @@
 				ctx.arc(x, y, ballRadius, 0, Math.PI*2);
 				ctx.fillStyle = '#0095dd';
 				ctx.fill();
+				ctx.closePath();
+			}
+
+			function drawPaddle() {
+				ctx.beginPath();
+				ctx.fillStyle = 'pink';
+				ctx.fillRect(paddleX, canvas.height - paddleHeight, paddleWidth, paddleHeight);
 				ctx.closePath();
 			}
 
@@ -49,6 +61,7 @@
 			function draw() {
 				ctx.clearRect(0, 0, canvas.width, canvas.height);
 				drawBall();
+				drawPaddle();
 				x+=dx;
 				y+=dy;
 				checkBoundaries();
