added movePaddle(), logic to move paddle-- call drawPaddle fn from within, logic of whether leftPress or rightPress is true and if so move + or - 5 pixels, added boundary similar to ball and walls of canvas so paddle would not pass boundary(width) of canvas, changed const to let on paddleX since value must change and added 'e' arg to handleKeyUp (missing from last commit), swapped drawPaddle fn for movePaddle fn within draw fn

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			// paddle
 			const paddleWidth = 75;
 			const paddleHeight = 10;
-			const paddleX = (canvas.width - paddleWidth)/2;
+			let paddleX = (canvas.width - paddleWidth)/2;
 
 			// default paddle controls
 			let leftPress = false;
@@ -74,7 +74,7 @@
 				}	
 			}
 
-			function handleKeyUp() {
+			function handleKeyUp(e) {
 				if(e.key == 'ArrowLeft') {
 					leftPress = false;
 				}
@@ -84,13 +84,19 @@
 			}
 
 			function movePaddle() {
-				
+				drawPaddle();
+				if(leftPress && paddleX > 0) {
+					paddleX -= 5;
+				}
+				else if(rightPress && paddleX < canvas.width - paddleWidth) {
+					paddleX += 5;
+				}
 			}
 
 			function draw() {
 				ctx.clearRect(0, 0, canvas.width, canvas.height);
 				drawBall();
-				drawPaddle();
+				movePaddle();
 				x+=dx;
 				y+=dy;
 				checkBoundaries();
