created variables brickX and brickY for dynamic coordinates/position-- brickWidth + brickPadding multipled by brick column (bc) then added to brickOffsetLeft calculates each brick X coordinate with each iteration; brick Y coordinate in similar fashion calculated by adding brickHeight and brickPadding multiplied by brick row (br) and then adding to brickOffsetTop-- end result is 3 rows/5 columns of bricks; no interactions/functionality with bricks yet

--- a/index.html
+++ b/index.html
@@ -59,11 +59,13 @@
 			function drawBricks() {
 				for(let bc=0; bc < brickColCount; bc++) {
 					for(let br=0; br < brickRowCount; br++) {
+						let brickX = (bc * (brickWidth + brickPadding)) + brickOffsetLeft;
+						let brickY = (br * (brightHeight + brickPadding)) + brickOffsetTop;
 						bricks[bc][br].x = 0;
 						bricks[bc][br].y = 0;
 						ctx.beginPath();
 						ctx.fillStyle = '#00ff00';
-						ctx.fillRect(0, 0, brickWidth, brightHeight);
+						ctx.fillRect(brickX, brickY, brickWidth, brightHeight);
 						ctx.closePath();					
 					}
 				}
