added fn that sets up brick collision detection-- checks to see if ball position falls btwn brick position/width/height prompting ball direction

--- a/index.html
+++ b/index.html
@@ -126,6 +126,17 @@
 				}
 			}
 
+			function detectBrickCollision() {
+				for(let bc=0; bc < brickColCount; bc++) {
+					for(let br=0; br < brickRowCount; br++) {
+						let brick = bricks[bc][br];
+						if(x > brick.x && x < brick.x + brickWidth && y > brick.y && y < brick.y + brightHeight ) {
+							dy = -dy;
+						}
+					}
+				}
+			}
+
 			function movePaddle() {
 				drawPaddle();
 				if(leftPress && paddleX > 0) {
