--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 			// default paddle controls
 			let leftPress = false;
 			let rightPress = false;
+			let spacebarPress = false;
 
 			// ball
 			let ballRadius = 10;
@@ -105,8 +106,10 @@
 					else {
 						alert('Game Over');
 						document.location.reload();
+						// https://developer.mozilla.org/en-US/docs/Web/API/Location/reload
 					}
 				}
+
 			}
 
 			// e.key finds string, e.which finds number associated with key
@@ -116,6 +119,9 @@
 				} 
 				else if(e.key == 'ArrowRight') {
 					rightPress = true;
+				}
+				else if(e.key == '' || e.keyCode == 32) {
+					spacebarPress = true;
 				}	
 			}
 
@@ -125,6 +131,9 @@
 				}
 				else if(e.key == 'ArrowRight') {
 					rightPress = false;
+				}
+				else if(e.key == '' || e.keyCode == 32) {
+					spacebarPress = false;
 				}
 			}
 
@@ -152,6 +161,13 @@
 				}
 			}
 
+			function pauseGame() {
+				if(spacebarPress) {
+					alert('Game Paused');
+					document.location.reload();
+				}
+			}
+
 			function draw() {
 				ctx.clearRect(0, 0, canvas.width, canvas.height);
 				drawBricks();
@@ -161,6 +177,7 @@
 				x+=dx;
 				y+=dy;
 				checkBoundaries();
+				// pauseGame()
 			}
 			document.addEventListener('keydown', handleKeyDown, false);
 			document.addEventListener('keyup', handleKeyUp, false)
