typo fix on drawScore method, fillText

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 			function drawScore() {
 				ctx.font = '16px Arial';
 				ctx.fillStyle = '#0095DD';
-				ctx.fillText = (`SCORE: ${score}`, 8, 20);
+				ctx.fillText(`SCORE: ${score}`, 8, 20);
 			}
 
 			function drawBricks() {
