added winning message to be prompted when all bricks have been hit, added to collision fn

--- a/index.html
+++ b/index.html
@@ -154,6 +154,10 @@
 								dy = -dy;
 								brick.status = 0;
 								score++;
+								if(score == brickColCount * brickRowCount) {
+									alert('Nice, you snagged them all :) #winner');
+									document.location.reload();
+								}
 							}
 						}
 					}
