swapped setInterval() for requestAnimationFrame(); changed initial ball 'speed/dir' and ball 'speed/dir' upon losing life/game restart-- the speed seemed a bit too slow once setInterval was swapped out

--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
 			let x = canvas.width/2;
 			let y = canvas.height - 30;
 			
-			let dx = 2;
-			let dy = -2;
+			let dx = 3;
+			let dy = -3;
 
 			function drawLives() {
 				ctx.font = '16px Arial';
@@ -130,8 +130,8 @@
 						else {
 							x = canvas.width/2;
 							y = canvas.height - 30;
-							dx = 2;
-							dy = -3;
+							dx = 3;
+							dy = -4;
 							paddleX = (canvas.width - paddleWidth)/2;
 						}
 					}
@@ -210,11 +210,13 @@
 				x+=dx;
 				y+=dy;
 				checkBoundaries();
-				pauseGame()
+				pauseGame();
+				requestAnimationFrame(draw);
+				// https://developer.mozilla.org/en-US/docs/Web/API/window/requestAnimationFrame
 			}
 			document.addEventListener('keydown', handleKeyDown, false);
 			document.addEventListener('keyup', handleKeyUp, false)
-			setInterval(draw, 10);
+			draw();
 		} else {
 			const msg = document.getElementById('msg')
 			msg.innerHTML = 'canvas unsupported';
